--- a/public/03-Service-2.html
+++ b/public/03-Service-2.html
@@ -64,137 +64,79 @@
 			<div class="sServiceHead section" id="sServiceHead">
 				<div class="container">
 					<div class="row">
-						<div class="col-12">
-							<p class="services-description-text">Процесс создания брендов мы&nbsp;понимаем комплексно и&nbsp;можем взять на&nbsp;себя весь спектр работ&nbsp;&mdash; от&nbsp;проведения маркетинговых исследований до&nbsp;тестирования и&nbsp;реализации собственных творческих разработок.
-							</p>
-						</div>
 						<div class="col">
 							<ul class="services-list">
 								<li class="services-list__item">
-									<button class="services-list__btn">Все услуги
+									<button class="services-list__btn">Стратегия
 									</button>
 								</li>
 								<li class="services-list__item">
-									<button class="services-list__btn">Потребительский брендинг
+									<button class="services-list__btn">Задача
 									</button>
 								</li>
 								<li class="services-list__item">
-									<button class="services-list__btn">Корпоративный брендинг
-									</button>
-								</li>
-								<li class="services-list__item">
-									<button class="services-list__btn active">Стратегия
-									</button>
-								</li>
-								<li class="services-list__item">
-									<button class="services-list__btn">Продвижение
+									<button class="services-list__btn">Решение
 									</button>
 								</li>
 							</ul>
 						</div>
-						<div class="col-12"> 
-							<div class="dd-group dd-group-js">
-								<div class="dd-group__item">
-									<div class="dd-group__head dd-head-js">
-										<div class="dd-group__row row">
-											<div class="col">
-												<div class="dd-group__wrraper">
-													<h4>Стратегия</h4>
-													<p>Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает взаимопонимание между бизнесом и&nbsp;потребителем. Используя методики социальной психологии и&nbsp;личностный анализ, мы&nbsp;формируем ценностное предложение, которое в&nbsp;дальнейшем ложится в&nbsp;основу вербальных и&nbsp;визуальных коммуникаций, помогая бизнесу вести с&nbsp;людьми взаимовыгодный и&nbsp;результативный диалог.</p>
-												</div>
-											</div>
-											<div class="col-auto">
-												<button></button>
-											</div>
-										</div>
-									</div>
-									<div class="dd-group__content dd-content-js">
-										<div class="content-wrrap"> 
-											<div class="row">
-												<div class="col-lg-6"> 
-													<p>Собираем и анализируем информацию</p>
-												</div>
-												<div class="col-lg-6">
-													<ul> 
-														<li>
-															<p>Аудит бренда</p>
-														</li>
-														<li>
-															<p>Глубинные и экспертные интервью</p>
-														</li>
-														<li>
-															<p>Кабинетные исследования</p>
-														</li>
-														<li>
-															<p>Внешние исследования (супервайзинг)</p>
-														</li>
-														<li>
-															<p>Стратегические сессии и воркшопы</p>
-														</li>
-													</ul>
-												</div>
+						<div class="col-12">
+							<p class="services-description-text">Разработка системы визуальной коммуникации и&nbsp;архитектуры бренда корпоративной социальной программы Металлоинвеста
+							</p>
+						</div>
+						<div class="dd-group dd-group-js">
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">
+									<div class="dd-group__row row">
+										<div class="col">
+											<div class="dd-group__wrraper">
+												<h4>Ситуация</h4>
+												<p>Корпоративная социальная программа &laquo;Вместе&raquo; реализуется Металлоинвестом и&nbsp;направлена на&nbsp;создание условий для развития регионов присутствия.</p>
 											</div>
 										</div>
-										<div class="content-wrrap"> 
-											<div class="row">
-												<div class="col-lg-6"> 
-													<p>Формируем смысловое наполнение</p>
-												</div>
-												<div class="col-lg-6">
-													<ul> 
-														<li>
-															<p>Позиционирование</p>
-														</li>
-														<li>
-															<p>Платформа бренда</p>
-														</li>
-														<li>
-															<p>EVP HR бренда (с принципами корпоративной культуры)</p>
-														</li>
-													</ul>
-												</div>
-											</div>
-										</div>
-										<div class="content-wrrap"> 
-											<div class="row">
-												<div class="col-lg-6"> 
-													<p>Создаём структуру</p>
-												</div>
-												<div class="col-lg-6">
-													<ul> 
-														<li>
-															<p>Бренд–архитектура</p>
-														</li>
-														<li>
-															<p>Ассортиментная матрица</p>
-														</li>
-													</ul>
-												</div>
-											</div>
-										</div>
-										<div class="content-wrrap"> 
-											<div class="row">
-												<div class="col-lg-6"> 
-													<p>Формируем принципы общения с аудиторией</p>
-												</div>
-												<div class="col-lg-6">
-													<ul> 
-														<li>
-															<p>Коммуникационная стратегия</p>
-														</li>
-													</ul>
-												</div>
-											</div>
+										<div class="col-auto">
+											<button></button>
 										</div>
 									</div>
 								</div>
+								<div class="dd-group__content dd-content-js">
+								</div>
+							</div>
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">
+									<div class="dd-group__row row">
+										<div class="col">
+											<div class="dd-group__wrraper">
+												<h4>Ситуация</h4>
+												<p>Разработать архитектуру и&nbsp;гибкую систему визуальной коммуникации для разных типов носителей. В&nbsp;едином фирменном стиле дифференцировать</p>
+											</div>
+										</div>
+										<div class="col-auto">
+											<button></button>
+										</div>
+									</div>
+								</div>
+								<div class="dd-group__content dd-content-js">
+								</div>
+							</div>
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">
+									<div class="dd-group__row row">
+										<div class="col">
+											<div class="dd-group__wrraper">
+												<h4>Ситуация</h4>
+												<p>&laquo;Вместе &raquo;&nbsp;&mdash; строится будущее руками каждого, кому небезразлично настоящее. Инициативы граждан Металлоинвест реализует вместе с&nbsp;ними. Архитектура &laquo;Вместе&raquo; вмещает под своим зонтиком разные направления: &laquo;Вместе со&nbsp;спортом&raquo;, &laquo;Вместе с&nbsp;культурой&raquo;, &laquo;Вместе с&nbsp;призванием&raquo;</p>
+											</div>
+										</div>
+										<div class="col-auto">
+											<button></button>
+										</div>
+									</div>
+								</div>
+								<div class="dd-group__content dd-content-js">
+								</div>
 							</div>
 						</div>
-						<a class="download-link" href="#">
-							<svg class="icon icon-doc-download ">
-								<use xlink:href="img/svg/sprite.svg#doc-download"></use>
-							</svg><span>Скачать презентацию (PDF)</span>
-						</a>
 					</div>
 				</div>
 			</div>
@@ -203,50 +145,114 @@
 			<div class="sCard section" id="sCard">
 				<div class="container-wide">
 					<div class="row">
-						<div class="col-md-12">
-							<div class="cardWrrap cardWrrap--horizontal text-lg-white">
+						<div class="col-md-6">
+							<div class="cardWrrap">
 								<div class="cardWrrap__content">
-									<h2>Выбери цвет настроения!</h2><span>Стратегия</span>
+									<h2></h2><span></span>
 								</div>
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-1.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-1.webp"/><img class="object-fit-js" src="img/@2x/card-bg-1.jpg" alt="" loading="lazy"/>
+									<source type="image/avif" srcset="img/@2x/avif/card-bg-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/card-bg-4.webp"/><img class="object-fit-js" src="img/@2x/card-bg-4.jpg" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
 							</div>
 						</div>
 						<div class="col-md-6"> 
-							<div class="cardWrrap text-lg-white">
+							<div class="cardWrrap">
 								<div class="cardWrrap__content">
-									<h2>Еще один проект для любимого бренда</h2><span>Продвижение, Стратегия</span>
+									<h2></h2><span></span>
 								</div>
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-2.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-2.webp"/><img class="object-fit-js" src="img/@2x/card-bg-2.jpg" alt="" loading="lazy"/>
+									<source type="image/avif" srcset="img/@2x/avif/card-bg-5.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/card-bg-5.webp"/><img class="object-fit-js" src="img/@2x/card-bg-5.jpg" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
 							</div>
 						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap">
+						<div class="col-md-12">
+							<div class="cardWrrap cardWrrap--horizontal">
 								<div class="cardWrrap__content">
-									<h2>Ничего лишнего</h2><span>Продвижение, Стратегия</span>
+									<h2></h2><span></span>
 								</div>
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-3.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-3.webp"/><img class="object-fit-js" src="img/@2x/card-bg-3.jpg" alt="" loading="lazy"/>
+									<source type="image/avif" srcset="img/@2x/avif/card-bg-6.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/card-bg-6.webp"/><img class="object-fit-js" src="img/@2x/card-bg-6.jpg" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
 							</div>
 						</div>
 					</div>
-					<div class="btn-more" href="#">
-						<svg class="icon icon-chevron-right-btn ">
-							<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
-						</svg><span>Портфолио по стратегии</span>
+				</div>
+			</div>
+			<!-- end sCard-->
+			<!-- start sVideo-->
+			<div class="sVideo section" id="sVideo">
+				<div class="container">
+					<p>Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.</p>
+					<p>Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо.</p>
+				</div>
+				<div class="container-wide">
+					<div class="video-wrrpaer">
+						<iframe src="https://www.youtube.com/embed/L_LUpnjgPso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+					</div>
+				</div>
+			</div>
+			<!-- end sVideo-->
+			<!-- start sServiceCite-->
+			<div class="sServiceCite section" id="sServiceCite">
+				<div class="container">
+					<p>Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.</p>
+					<figure>
+						<svg class="icon icon-quote ">
+							<use xlink:href="img/svg/sprite.svg#quote"></use>
+						</svg>
+						<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.</blockquote>
+						<!-- picture-->
+						<picture> 
+							<source type="image/avif" srcset="img/@2x/avif/cite-photo.avif"/>
+							<source type="image/webp" srcset="img/@2x/webp/cite-photo.webp"/><img src="img/@2x/cite-photo.jpg" alt="" loading="lazy"/>
+						</picture>
+						<!-- /picture-->
+						<figcaption>Даша Данилычева <br>
+							<cite>Дизайнер проекта</cite>
+						</figcaption>
+					</figure>
+				</div>
+			</div>
+			<!-- end sServiceCite-->
+			<!-- start sCard-->
+			<div class="sCard section" id="sCard">
+				<div class="container-wide">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="cardWrrap">
+								<div class="cardWrrap__content">
+									<h2></h2><span></span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/card-bg-5.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/card-bg-5.webp"/><img class="object-fit-js" src="img/@2x/card-bg-5.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6"> 
+							<div class="cardWrrap">
+								<div class="cardWrrap__content">
+									<h2></h2><span></span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/card-bg-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/card-bg-4.webp"/><img class="object-fit-js" src="img/@2x/card-bg-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
