--- a/public/03-Service-2.html
+++ b/public/03-Service-2.html
@@ -67,15 +67,15 @@
 						<div class="col">
 							<ul class="services-list">
 								<li class="services-list__item">
-									<button class="services-list__btn">Стратегия
+									<button class="services-list__link">Стратегия
 									</button>
 								</li>
 								<li class="services-list__item">
-									<button class="services-list__btn">Задача
+									<button class="services-list__link">Задача
 									</button>
 								</li>
 								<li class="services-list__item">
-									<button class="services-list__btn">Решение
+									<button class="services-list__link">Решение
 									</button>
 								</li>
 							</ul>
@@ -257,6 +257,139 @@
 				</div>
 			</div>
 			<!-- end sCard-->
+			<!-- start sServiceHead-->
+			<div class="sServiceHead section sServiceHead sServiceHead--for-what" id="sServiceHead">
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+							<p class="services-description-text">Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.
+							</p>
+						</div>
+						<div class="col">
+							<ul class="services-list">
+								<li class="services-list__item">
+									<button class="services-list__link">Стратегия
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Корпоративный брендинг
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Продвижение
+									</button>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end sServiceHead-->
+			<!-- start sNews-->
+			<div class="sNews section sNews sNews--full" id="sNews">
+				<div class="container-wide">
+					<div class="section-title">
+						<h2>Для этого клиента делали</h2>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-1.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-1.webp"/><img class="object-fit-js" src="img/@2x/sNews-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Халзан: новые истории любимого героя</h3>
+								<div class="col">
+									<ul class="services-list">
+										<li class="services-list__item">
+											<button class="services-list__link">Стратегия
+											</button>
+										</li>
+										<li class="services-list__item">
+											<button class="services-list__link">Корпоративный брендинг
+											</button>
+										</li>
+										<li class="services-list__item">
+											<button class="services-list__link">Продвижение
+											</button>
+										</li>
+									</ul>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-3.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-3.webp"/><img class="object-fit-js" src="img/@2x/sNews-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Проект для любимого бренда Valio</h3>
+								<div class="col">
+									<ul class="services-list">
+										<li class="services-list__item">
+											<button class="services-list__link">Продвижение
+											</button>
+										</li>
+									</ul>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-4.webp"/><img class="object-fit-js" src="img/@2x/sNews-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Халзан: новые истории любимого героя</h3>
+								<div class="col">
+									<ul class="services-list">
+										<li class="services-list__item">
+											<button class="services-list__link">Корпоративный брендинг
+											</button>
+										</li>
+										<li class="services-list__item">
+											<button class="services-list__link">Продвижение
+											</button>
+										</li>
+									</ul>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-5.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-5.webp"/><img class="object-fit-js" src="img/@2x/sNews-5.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Проект для любимого бренда Valio</h3>
+								<div class="col">
+									<ul class="services-list">
+										<li class="services-list__item">
+											<button class="services-list__link">Корпоративный брендинг
+											</button>
+										</li>
+										<li class="services-list__item">
+											<button class="services-list__link">Продвижение
+											</button>
+										</li>
+									</ul>
+								</div>
+							</a>
+						</div>
+						<div class="spinner">
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end sNews-->
 			<footer class="footer">
 				<div class="container">
 					<div class="row">
