--- a/public/03-Service.html
+++ b/public/03-Service.html
@@ -71,23 +71,23 @@
 						<div class="col">
 							<ul class="services-list">
 								<li class="services-list__item">
-									<button class="services-list__btn">Все услуги
+									<button class="services-list__link">Все услуги
 									</button>
 								</li>
 								<li class="services-list__item">
-									<button class="services-list__btn">Потребительский брендинг
+									<button class="services-list__link">Потребительский брендинг
 									</button>
 								</li>
 								<li class="services-list__item">
-									<button class="services-list__btn">Корпоративный брендинг
+									<button class="services-list__link">Корпоративный брендинг
 									</button>
 								</li>
 								<li class="services-list__item">
-									<button class="services-list__btn active">Стратегия
+									<button class="services-list__link">Стратегия
 									</button>
 								</li>
 								<li class="services-list__item">
-									<button class="services-list__btn">Продвижение
+									<button class="services-list__link">Продвижение
 									</button>
 								</li>
 							</ul>
@@ -200,7 +200,7 @@
 			</div>
 			<!-- end sServiceHead-->
 			<!-- start sCard-->
-			<div class="sCard section" id="sCard">
+			<div class="sCard section indent-bottom" id="sCard">
 				<div class="container-wide">
 					<div class="row">
 						<div class="col-md-12">
